# gribscan-harmonie

./: README.md  pyproject.toml
notebooks/: dmi_dini.ipynb  dmi_dini_to_zarr.ipynb
src/gribscan_harmonie/: load.py  utils.py
src/gribscan_harmonie/examples/: deode.py  dmi_dini.py
tests/: test_harmonie_gribscan.py
