[project]
name = "gribscan-harmonie"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Leif Denby", email = "lcd@dmi.dk"},
]
dependencies = [
    "isodate>=0.6.1",
    "pandas>=2.2.2",
    "tqdm>=4.66.2",
    "loguru>=0.7.2",
    "gribscan @ git+https://github.com/leifdenby/gribscan@harmonie-rotated-and-lambert-grids",
    "xarray>=2024.3.0",
    "zarr>=2.17.2",
    "scipy>=1.13.0",
    "fsspec>=2024.3.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.isort]
profile = "black"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.7.0",
    "pytest>=8.1.1",
]
